<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >



  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/lab_string"
      android:id="@+id/lab"
      style="@style/TextBody"
      />
<Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/signInBtn_string"
      android:layout_marginTop="5dp"
      android:id="@+id/signInBtn"
      style="@style/Widget.Button"
      />
<Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/forgot_string"
      android:layout_marginTop="5dp"
      android:id="@+id/forgot"
      style="@style/Widget.Button"
      />
<Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/create_string"
      android:layout_marginTop="5dp"
      android:id="@+id/create"
      style="@style/Widget.Button"
      />
<EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/email_string"
      android:id="@+id/email"
      />
<EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password_string"
      android:id="@+id/password"
      />



</LinearLayout>
</ScrollView>
