<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="10dp"><EditText android:hint="@string/keywords_string" android:id="@+id/keywords" android:layout_height="wrap_content" android:layout_width="match_parent"/><TextView android:id="@+id/options" android:layout_below="@+id/keywords" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/options_string" style="@style/TextBody"/><Button android:gravity="center" android:id="@+id/clear" android:layout_alignBottom="@+id/search" android:layout_below="@+id/options" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_toLeftOf="@+id/search" android:layout_width="match_parent" android:text="@string/clear_string" style="@style/Widget.Button"/><Button android:id="@+id/search" android:layout_alignParentRight="true" android:layout_below="@+id/options" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_width="wrap_content" android:text="@string/search_string" style="@style/Widget.Button"/></RelativeLayout>